[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=3.4",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.pytest.ini_options]
addopts = [
  "--black",
  "--cov=./",
  "--cov-report=xml",
  "--doctest-modules",
  "--flake8",
  "--mypy",
  "--pydocstyle",
]

[tool.setuptools_scm]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py
isolated_build = True

[testenv]
commands = pytest
deps =
  pytest>=6.0.0
  pytest-black
  pytest-cov
  pytest-flake8
  pytest-mypy
  pytest-pydocstyle>=2.1.0
extras = testing
"""
