[aliases]
test = pytest

[flake8]
doctests = True
max-complexity = 10

[metadata]
author = Kon
description = Optuna + LightGBM \= OptGBM
license = MIT License
long_description = file: README.md
long_description_content_type = text/markdown
name = OptGBM

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True

[options]
include_package_data = True
install_requires =
  lightgbm>=2.2.2
  numpy
  optuna
  pandas
  scikit-learn>=0.19.0
packages = find:
python_requires = >=3.5
setup_requires =
  pytest-runner
tests_require =
  pytest
  pytest-black
  pytest-flake8
  pytest-isort
  pytest-mypy
  pytest-pydocstyle==2.0.0

[options.extras_require]
develop =
  matplotlib

[options.packages.find]
exclude = tests

[pydocstyle]
convention = numpy

[tool:pytest]
addopts =
  --black
  --doctest-modules
  --flake8
  --isort
  --mypy
  --pydocstyle
