[flake8]
doctests = True
max-complexity = 10

[metadata]
author = Kon
description = Optuna + LightGBM \= OptGBM
license = MIT License
long_description = file: README.md
long_description_content_type = text/markdown
name = OptGBM

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True

[options]
entry_points = file: entry_points.cfg
include_package_data = True
install_requires =
  click
  joblib
  lightgbm>=2.2.2
  numpy
  optuna
  pandas
  pyyaml
  scikit-learn>=0.19.0
  traitlets
packages = find:
python_requires = >=3.5

[options.extras_require]
testing =
  matplotlib

[options.packages.find]
exclude = tests

[pydocstyle]
convention = numpy

[tool:pytest]
addopts =
  --black
  --cov=./
  --cov-report=xml
  --doctest-modules
  --flake8
  --ignore=examples
  --mypy
  --pydocstyle
